# AI-Munim

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  context.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml
apps/api/: Dockerfile  conftest.py  pyproject.toml
apps/api/scripts/: seed_cod_order.py
apps/api/src/munim/: main.py
apps/api/src/munim/agents/daily_briefing/: agent.py  constants.py  schemas.py  service.py
apps/api/src/munim/agents/rto_mitigator/: agent.py  scoring.py  signals.py
apps/api/src/munim/chat/: agent.py  enforcer.py  tools.py  types.py
apps/api/src/munim/chat/tests/: test_agent.py  test_enforcer.py  test_tools.py  test_types.py
apps/api/src/munim/connectors/: _row_sink.py  base.py  registry.py
apps/api/src/munim/connectors/meta_ads/: connector.py  mapper.py
apps/api/src/munim/connectors/shiprocket/: connector.py  mapper.py
apps/api/src/munim/connectors/shopify/: client.py  connector.py  mapper.py
apps/api/src/munim/connectors/tests/: test_registry.py  test_row_sink.py
apps/api/src/munim/models/: __init__.py  connector_credentials.py  merchant.py  record.py  run_log.py  user.py
apps/api/src/munim/models/tests/: test_tables.py
apps/api/src/munim/modules/agent_runs/: router.py  schemas.py  service.py
apps/api/src/munim/schemas/: __init__.py  order.py
apps/api/src/munim/shared/: config.py  constants.py  crypto.py  db.py  errors.py  logging.py  responses.py  trace.py
docs/: architecture.md  research.md  (+3 more)
(+173 files in other folders)
