[project]
name = "munim-api"
version = "0.1.0"
description = "AI-Munim API - AI employee for D2C brands."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.117",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "structlog>=24.4",
    "python-ulid>=3.0",
    "httpx>=0.28",
    "cryptography>=44.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/munim"]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src"]
addopts = ["-q", "--import-mode=importlib"]
asyncio_mode = "auto"
